Added apple image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 </head>
 <body>
+  <img src="https://avatars0.githubusercontent.com/u/10639145?v=4&s=280">
   <h1>Coming Soon.. Le Wagon</h1>
 </body>
 </html>
