--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 
 </head>
 <body>
-  <img src="https://avatars0.githubusercontent.com/u/10639145?v=4&s=280">
-  <h1>Coming Soon.. Le Wagon</h1>
+  <div class="container">
+    <img src="https://avatars0.githubusercontent.com/u/10639145?v=4&s=280">
+    <h1>Coming Soon.. Le Wagon</h1>
+  </div>
 </body>
 </html>
